major changes in ini files
- Changes in features.ini to specify default DWIN graphic directory and other minor issues ;
- Changes in stm32f1.ini to match creality board ini

--- a/ini/stm32f1.ini
+++ b/ini/stm32f1.ini
@@ -89,14 +89,15 @@ board_upload.offset_address = 0x08005000
 # Uses HAL STM32 to support Marlin UI for TFT screen with optional touch panel
 #
 [env:mks_robin]
-extends                 = stm32_variant
-board                   = genericSTM32F103ZE
-board_build.variant     = MARLIN_F103Zx
+platform             = ${common_stm32.platform}
+extends              = stm32_variant
+board                = genericSTM32F103ZE
+board_build.variant  = MARLIN_F103Zx
 board_build.encrypt_mks = Robin.bin
-board_build.offset      = 0x7000
-build_flags             = ${stm32_variant.build_flags}
+board_build.offset   = 0x7000
+build_flags          = ${stm32_variant.build_flags}
                           -DENABLE_HWSERIAL3 -DTIMER_SERIAL=TIM5
-build_unflags           = ${stm32_variant.build_unflags}
+build_unflags        = ${stm32_variant.build_unflags}
                           -DUSBCON -DUSBD_USE_CDC
 
 #
@@ -111,13 +112,16 @@ build_flags                 = ${common_STM32F103RC_variant.build_flags}
                               -DTIMER_SERVO=TIM5 -DDEFAULT_SPI=3
 build_unflags               = ${common_STM32F103RC_variant.build_unflags}
                               -DUSBCON -DUSBD_USE_CDC
+monitor_speed               = 115200
 debug_tool                  = stlink
 
 #
 # Creality (STM32F103Rx)
 #
 [STM32F103Rx_creality]
+platform                    = ${common_stm32.platform}
 extends                     = stm32_variant
+board                       = genericSTM32F103RE
 board_build.variant         = MARLIN_F103Rx
 board_build.offset          = 0x7000
 board_upload.offset_address = 0x08007000
@@ -250,9 +254,10 @@ build_unflags        = ${stm32_variant.build_unflags}
 # Malyan M200 (STM32F103CB)
 #
 [env:STM32F103CB_malyan]
-extends          = common_stm32
-board            = malyanm200_f103cb
-build_flags      = ${common_stm32.build_flags}
+platform    = ${common_stm32.platform}
+extends     = common_stm32
+board       = malyanm200_f103cb
+build_flags = ${common_stm32.build_flags}
                    -DHAL_PCD_MODULE_ENABLED -DDISABLE_GENERIC_SERIALUSB
                    -DHAL_UART_MODULE_ENABLED
 build_src_filter = ${common.default_src_filter} +<src/HAL/STM32>
@@ -303,7 +308,7 @@ board_build.encrypt_mks     = mksLite3.bin
 # MKS Robin Pro (STM32F103ZET6)
 #
 [env:mks_robin_pro]
-extends                 = env:mks_robin
+extends             = env:mks_robin
 board_build.encrypt_mks = Robin_pro.bin
 
 #
@@ -352,6 +357,7 @@ upload_protocol = serial
 # Longer 3D board in Alfawise U20 (STM32F103VET6)
 #
 [env:STM32F103VE_longer]
+platform                    = ${common_stm32.platform}
 extends                     = stm32_variant
 lib_deps                    = ${common.lib_deps}
   https://github.com/tpruvot/STM32_Servo_OpenDrain/archive/2.0.zip
@@ -370,8 +376,9 @@ debug_tool                  = stlink
 # TRIGORILLA PRO (STM32F103ZET6)
 #
 [env:trigorilla_pro]
-extends              = stm32_variant
-board                = genericSTM32F103ZE
+platform      = ${common_stm32.platform}
+extends       = stm32_variant
+board         = genericSTM32F103ZE
 board_build.variant  = MARLIN_F103Zx
 build_flags          = ${stm32_variant.build_flags}
                        -DENABLE_HWSERIAL3 -DTIMER_SERIAL=TIM5
