--- a/ini/features.ini
+++ b/ini/features.ini
@@ -17,6 +17,7 @@ HAS_TFT_LVGL_UI                        = lvgl=https://github.com/makerbase-mks/L
 POSTMORTEM_DEBUGGING                   = src_filter=+<src/HAL/shared/cpu_exception> +<src/HAL/shared/backtrace>
                                          build_flags=-funwind-tables
 MKS_WIFI_MODULE                        = QRCode=https://github.com/makerbase-mks/QRCode/archive/master.zip
+// Trinamic stepper config 0.7.3
 HAS_TRINAMIC_CONFIG                    = TMCStepper@~0.7.3
                                          src_filter=+<src/module/stepper/trinamic.cpp> +<src/gcode/feature/trinamic/M122.cpp> +<src/gcode/feature/trinamic/M906.cpp> +<src/gcode/feature/trinamic/M911-M914.cpp> +<src/gcode/feature/trinamic/M919.cpp>
 HAS_T(RINAMIC_CONFIG|MC_SPI)           = src_filter=+<src/feature/tmc_util.cpp>
@@ -26,6 +27,8 @@ HAS_MOTOR_CURRENT_I2C                  = SlowSoftI2CMaster
                                          src_filter=+<src/feature/digipot>
 HAS_TMC26X                             = TMC26XStepper=https://github.com/MarlinFirmware/TMC26XStepper/archive/master.zip
                                          src_filter=+<src/module/stepper/TMC26X.cpp>
+HAS_L64XX                              = Arduino-L6470@0.8.0
+                                         src_filter=+<src/libs/L64XX> +<src/module/stepper/L64xx.cpp> +<src/gcode/feature/L6470> +<src/HAL/shared/HAL_spi_L6470.cpp>
 LIB_INTERNAL_MAX31865                  = src_filter=+<src/libs/MAX31865.cpp>
 NEOPIXEL_LED                           = adafruit/Adafruit NeoPixel@~1.8.0
                                          src_filter=+<src/feature/leds/neopixel.cpp>
@@ -44,8 +47,10 @@ HAS_SPI_TFT                            = src_filter=+<src/HAL/STM32/tft/tft_spi.
 I2C_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_i2c.cpp>
 SOFT_I2C_EEPROM                        = SlowSoftI2CMaster, SlowSoftWire=https://github.com/felias-fogg/SlowSoftWire/archive/master.zip
 SPI_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_spi.cpp>
-HAS_DWIN_E3V2|IS_DWIN_MARLINUI         = src_filter=+<src/lcd/e3v2/common>
-DWIN_CREALITY_LCD                      = src_filter=+<src/lcd/e3v2/creality>
+HAS_GRAPHICAL_TFT                      = src_filter=+<src/lcd/tft>
+//HAS_DWIN_E3V2|IS_DWIN_MARLINUI         = src_filter=+<src/lcd/e3v2/common>
+// Change default source for Aquila LCD
+DWIN_CREALITY_LCD                      = src_filter=+<src/lcd/dwin>
 DWIN_LCD_PROUI                         = src_filter=+<src/lcd/e3v2/proui>
 IS_DWIN_MARLINUI                       = src_filter=+<src/lcd/e3v2/marlinui>
 HAS_GRAPHICAL_TFT                      = src_filter=+<src/lcd/tft>
