--- a/ini/features.ini
+++ b/ini/features.ini
@@ -17,7 +17,7 @@ HAS_TFT_LVGL_UI                        = lvgl=https://github.com/makerbase-mks/L
 POSTMORTEM_DEBUGGING                   = src_filter=+<src/HAL/shared/cpu_exception> +<src/HAL/shared/backtrace>
                                          build_flags=-funwind-tables
 MKS_WIFI_MODULE                        = QRCode=https://github.com/makerbase-mks/QRCode/archive/master.zip
-// Trinamic stepper config 0.7.3
+## Trinamic stepper config 0.7.3
 HAS_TRINAMIC_CONFIG                    = TMCStepper@~0.7.3
                                          src_filter=+<src/module/stepper/trinamic.cpp> +<src/gcode/feature/trinamic/M122.cpp> +<src/gcode/feature/trinamic/M906.cpp> +<src/gcode/feature/trinamic/M911-M914.cpp> +<src/gcode/feature/trinamic/M919.cpp>
 HAS_T(RINAMIC_CONFIG|MC_SPI)           = src_filter=+<src/feature/tmc_util.cpp>
@@ -48,12 +48,11 @@ I2C_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_i
 SOFT_I2C_EEPROM                        = SlowSoftI2CMaster, SlowSoftWire=https://github.com/felias-fogg/SlowSoftWire/archive/master.zip
 SPI_EEPROM                             = src_filter=+<src/HAL/shared/eeprom_if_spi.cpp>
 HAS_GRAPHICAL_TFT                      = src_filter=+<src/lcd/tft>
-//HAS_DWIN_E3V2|IS_DWIN_MARLINUI         = src_filter=+<src/lcd/e3v2/common>
-// Change default source for Aquila LCD
+##HAS_DWIN_E3V2|IS_DWIN_MARLINUI         = src_filter=+<src/lcd/e3v2/common>
+## Change default source for Aquila LCD
 DWIN_CREALITY_LCD                      = src_filter=+<src/lcd/dwin>
 DWIN_LCD_PROUI                         = src_filter=+<src/lcd/e3v2/proui>
 IS_DWIN_MARLINUI                       = src_filter=+<src/lcd/e3v2/marlinui>
-HAS_GRAPHICAL_TFT                      = src_filter=+<src/lcd/tft>
 IS_TFTGLCD_PANEL                       = src_filter=+<src/lcd/TFTGLCD>
 HAS_TOUCH_BUTTONS                      = src_filter=+<src/lcd/touch/touch_buttons.cpp>
 HAS_MARLINUI_MENU                      = src_filter=+<src/lcd/menu>
